--- a/css/style.scss
+++ b/css/style.scss
@@ -14,31 +14,32 @@ body {
     background-size: cover;
     align-items: center;
     position: relative;
-    .container {
-      align-items: center;
-    }
     header {
-      nav {
+      .navbar-default {
         background-color: transparent;
         border: none;
         background-image: none;
         box-shadow: none;
         padding-top: 30px;
         .button-rounded {
-          padding-top: 7px!important;
-          padding-bottom: 7px!important;
+          padding-top: 7px;
+          padding-bottom: 7px;
           a {
             border: 1px solid white;
             border-radius: 50px;
-            padding: 8px 20px!important;
+            padding: 8px 20px;
+            &:hover {
+              border: 1px solid #19bd9a;
+              color: #19bd9a;
+            }
           }
         }
         li {
           a {
             font-size: 16px;
-            color: white!important;
+            color: white;
             &:hover {
-              font-weight: bold;
+              color: #19bd9a;
             }
           }
         }
@@ -46,7 +47,6 @@ body {
     }
     h1 {
       font-family: $title-font;
-      text-transform: uppercase;
       color: white;
       font-size: 35px;
       text-align: center;
