--- a/css/style.scss
+++ b/css/style.scss
@@ -82,3 +82,62 @@ body {
     }
   }
 }
+h3 {
+  font-size: 20px;
+  font-family: $title-font;
+  margin-top: 34px;
+  margin-bottom: 46px;
+  color: #333b46;
+  letter-spacing: 2px;
+  font-weight: 300;
+}
+p {
+  color: #81868e;
+}
+.this-is-bouncy {
+  padding-top: 80px;
+  padding-bottom: 76px;
+  p {
+     margin-bottom: 46px;
+   }
+  a {
+    border: 1px solid #333b46;
+    border-radius: 50px;
+    padding: 8px 30px;
+    font-size: 16px;
+    color: #333b46;
+    text-decoration: none;
+    &:hover {
+      border: 1px solid #19bd9a;
+      background-color: #19bd9a;
+      color: white;
+    }
+  }
+}
+.details-about-B {
+  background-color: #f3f3f3;
+  padding-top: 78px;
+  padding-bottom: 100px;
+  p {
+    max-width: 480px;
+    margin: auto;
+    margin-bottom: 60px;
+  }
+}
+
+
+
+.management .item .soc a {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  background-color: #dedede;
+  border-radius: 50%;
+  margin-left: 5px;
+  text-align: center;
+  line-height: 26px;
+}
+.management .item .soc a i {
+  font-size: 12px;
+  color: white;
+}
