--- a/css/style.scss
+++ b/css/style.scss
@@ -2,9 +2,42 @@
 @import "bootstrap.css";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
 
+@mixin max-screen($res) {
+  @media screen and (max-width: $res) {
+    @content;
+  }
+}
+
 $main-font: 'Open Sans', sans-serif;
 $title-font: 'Roboto', sans-serif;
 $inscript-font: 'Source Sans Pro', sans-serif;
+$contrast-color: #19bd9a;
+
+h3 {
+  font-size: 20px;
+  font-family: $title-font;
+  margin-top: 34px;
+  margin-bottom: 46px;
+  color: #333b46;
+  letter-spacing: 2px;
+  font-weight: 300;
+}
+p {
+  color: #81868e;
+  line-height: 28px;
+}
+.comment {
+  max-width: 480px;
+  margin: auto;
+  margin-bottom: 60px;
+}
+.contrast-bg {
+  background-color: $contrast-color;
+}
+.contrast-font {
+  color: $contrast-color;
+}
+
 
 body {
   font-family: $main-font;
@@ -29,8 +62,8 @@ body {
             border-radius: 50px;
             padding: 8px 20px;
             &:hover {
-              border: 1px solid #19bd9a;
-              color: #19bd9a;
+              border: 1px solid $contrast-color;
+              color: $contrast-color;
             }
           }
         }
@@ -39,7 +72,7 @@ body {
             font-size: 16px;
             color: white;
             &:hover {
-              color: #19bd9a;
+              color: $contrast-color;
             }
           }
         }
@@ -69,7 +102,7 @@ body {
       width: 36px;
       height: 36px;
       border-radius: 50px;
-      background-color: #19bd9a;
+      background-color: $contrast-color;
       left: 50%;
       bottom: 76px;
       margin-left: -18px;
@@ -82,24 +115,12 @@ body {
     }
   }
 }
-h3 {
-  font-size: 20px;
-  font-family: $title-font;
-  margin-top: 34px;
-  margin-bottom: 46px;
-  color: #333b46;
-  letter-spacing: 2px;
-  font-weight: 300;
-}
-p {
-  color: #81868e;
-}
 .this-is-bouncy {
   padding-top: 80px;
   padding-bottom: 76px;
   p {
-     margin-bottom: 46px;
-   }
+    margin-bottom: 46px;
+  }
   a {
     border: 1px solid #333b46;
     border-radius: 50px;
@@ -108,8 +129,8 @@ p {
     color: #333b46;
     text-decoration: none;
     &:hover {
-      border: 1px solid #19bd9a;
-      background-color: #19bd9a;
+      border: 1px solid $contrast-color;
+      background-color: $contrast-color;
       color: white;
     }
   }
@@ -118,26 +139,129 @@ p {
   background-color: #f3f3f3;
   padding-top: 78px;
   padding-bottom: 100px;
-  p {
-    max-width: 480px;
-    margin: auto;
+  .items {
     margin-bottom: 60px;
+    div {
+      display: inline-block;
+      width: 54px;
+      height: 54px;
+      background-color: #81868e;
+      border-radius: 50%;
+      margin: 0px 13px;
+      text-align: center;
+      i {
+        font-size: 30px;
+        color: white;
+        padding-top: 12px;
+      }
+    }
+    .contrast-bg {
+      background-color: $contrast-color;
+    }
+  }
+  h4 {
+    font-size: 20px;
+    color: #464646;
+    margin-bottom: 40px;
+    letter-spacing: 1px;
+  }
+  .p-16 {
+    font-size: 16px;
+  }
+  span {
+    font-weight: bold;
   }
 }
-
-
-
-.management .item .soc a {
-  display: inline-block;
-  width: 26px;
-  height: 26px;
-  background-color: #dedede;
-  border-radius: 50%;
-  margin-left: 5px;
-  text-align: center;
-  line-height: 26px;
+.featured-pj {
+  padding-top: 78px;
+  .project-example {
+    display: flex;
+    flex-wrap: wrap;
+    .photo-example {
+      width: 25%;
+      position: relative;
+      transition: 1s;
+      @include max-screen(768px) {
+        width: 50%;
+      }
+      img {
+        width: 100%;
+      }
+      &:after {
+        content: "";
+        display: block;
+        transition: 0.5s;
+      }
+      &:hover::after {
+        width: 100%;
+        display: block;
+        height: 100%;
+        background-color: rgba(21, 21, 21, 0.85);
+        position: absolute;
+        top: 0;
+        color: white;
+        z-index: 1;
+      }
+      &:before {
+        content: "";
+        display: block;
+      }
+      &:hover::before {
+        content: "VINTAGE";
+        color: white;
+        font-family: $main-font;
+        font-size: 20px;
+        font-weight: 300;
+        letter-spacing: 2px;
+        display: block;
+        height: 20px;
+        position: absolute;
+        top: 50%;
+        left: 42%;
+        z-index: 2;
+      }
+    }
+    .wide {
+      width: 50%;
+      @include max-screen(768px) {
+        width: 100%;
+      }
+      img {
+        width: 100%;
+      }
+    }
+  }
+  .bg {
+    background-image: url("../images/green-bg-example_02.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 114px;
+    .submit {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      p {
+        color: white;
+        span {
+          font-weight: bold;
+        }
+      }
+      a {
+        border: 1px solid white;
+        border-radius: 50px;
+        padding: 8px 30px;
+        font-size: 16px;
+        color: white;
+        text-decoration: none;
+        &:hover {
+          background-color: white;
+          color: $contrast-color;
+        }
+      }
+    }
+  }
 }
-.management .item .soc a i {
-  font-size: 12px;
-  color: white;
+.services {
+
 }
