--- a/css/style.css
+++ b/css/style.css
@@ -192,9 +192,12 @@ body {
       display: flex;
       justify-content: space-between;
       padding-top: 40px;
-      padding-bottom: 40px; }
+      padding-bottom: 40px;
+      align-items: center; }
       .featured-pj .bg .submit p {
-        color: white; }
+        color: white;
+        font-size: 20px;
+        margin: 0px; }
         .featured-pj .bg .submit p span {
           font-weight: bold; }
       .featured-pj .bg .submit a {
@@ -207,5 +210,140 @@ body {
         .featured-pj .bg .submit a:hover {
           background-color: white;
           color: #19bd9a; }
+
+.services {
+  padding-top: 80px; }
+  .services .serv-parts {
+    padding-bottom: 120px; }
+    .services .serv-parts .tabs, .services .serv-parts .nav, .services .serv-parts .nav-tabs {
+      border-bottom: none; }
+      .services .serv-parts .tabs li.active a, .services .serv-parts .nav li.active a, .services .serv-parts .nav-tabs li.active a {
+        background-color: #19bd9a; }
+        .services .serv-parts .tabs li.active a:hover, .services .serv-parts .nav li.active a:hover, .services .serv-parts .nav-tabs li.active a:hover {
+          background-color: #19bd9a; }
+        .services .serv-parts .tabs li.active a:focus, .services .serv-parts .nav li.active a:focus, .services .serv-parts .nav-tabs li.active a:focus {
+          background-color: #19bd9a; }
+      .services .serv-parts .tabs li a, .services .serv-parts .nav li a, .services .serv-parts .nav-tabs li a {
+        display: block;
+        width: 54px;
+        height: 54px;
+        background-color: #81868e;
+        border-radius: 50%;
+        margin-bottom: 18px;
+        text-align: center;
+        padding: 12px 0px; }
+        .services .serv-parts .tabs li a.active, .services .serv-parts .tabs li a:hover, .services .serv-parts .nav li a.active, .services .serv-parts .nav li a:hover, .services .serv-parts .nav-tabs li a.active, .services .serv-parts .nav-tabs li a:hover {
+          background-color: #19bd9a; }
+        .services .serv-parts .tabs li a i, .services .serv-parts .nav li a i, .services .serv-parts .nav-tabs li a i {
+          font-size: 30px;
+          color: white; }
+    .services .serv-parts .tab-content h4 {
+      font-size: 20px;
+      color: #464646;
+      margin-bottom: 40px;
+      letter-spacing: 1px; }
+    .services .serv-parts .tab-content .p-16 {
+      font-size: 16px; }
+    .services .serv-parts .tab-content span {
+      font-weight: bold; }
+    .services .serv-parts .right-part {
+      padding-top: 40px; }
+      .services .serv-parts .right-part .percents {
+        width: 32%;
+        display: inline-block; }
+        .services .serv-parts .right-part .percents img {
+          width: 100%; }
+        .services .serv-parts .right-part .percents p {
+          width: 100%; }
+
+.impressed {
+  background-image: url("../images/imressed-bg_02.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 420px;
+  padding-top: 80px;
+  padding-bottom: 80px; }
+  .impressed .relative {
+    position: relative; }
+    .impressed .relative h3 {
+      color: white;
+      margin-bottom: 60px; }
+    .impressed .relative p {
+      color: #b2b3b3; }
+    .impressed .relative .by-line {
+      color: #b2b3b3;
+      margin-top: 30px; }
+      .impressed .relative .by-line span {
+        font-weight: bold; }
+      .impressed .relative .by-line .contrast-font {
+        font-weight: normal; }
+    .impressed .relative .mac-comp {
+      position: absolute;
+      right: 0;
+      top: -130px; }
+
+.portfolio {
+  background-color: #f3f3f3;
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+
+.grid-container {
+  columns: 4 200px;
+  max-width: 1170px;
+  column-gap: 1.5rem;
+  margin: 0 auto; }
+  .grid-container .gal-photo {
+    width: 150px;
+    margin: 0 10px 10px 0;
+    display: inline-block;
+    width: 100%;
+    transition: 0.5s;
+    position: relative; }
+    .grid-container .gal-photo:hover .overlay {
+      opacity: 1; }
+    .grid-container .gal-photo .text-hover {
+      position: absolute;
+      padding: 15px 30px 0px;
+      text-align: center; }
+      .grid-container .gal-photo .text-hover h3 {
+        margin-bottom: 10px; }
+        .grid-container .gal-photo .text-hover h3:after {
+          content: "";
+          display: block;
+          border-bottom: 1px solid #19bd9a;
+          width: 26px;
+          padding-top: 10px; }
+      .grid-container .gal-photo .text-hover p {
+        font-size: 12px;
+        line-height: 22px;
+        margin-bottom: 20px;
+        color: #b2b3b3; }
+      .grid-container .gal-photo .text-hover a {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+        background-color: black;
+        border-radius: 50%;
+        margin-right: 10px;
+        text-align: center; }
+        .grid-container .gal-photo .text-hover a i {
+          font-size: 16px;
+          color: white;
+          padding-top: 6px; }
+    .grid-container .gal-photo img {
+      width: 100%;
+      transition: 1s; }
+    .grid-container .gal-photo .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: 1s ease;
+      background-color: rgba(21, 21, 21, 0.85); }
 
 /*# sourceMappingURL=style.css.map */
