--- a/css/style.scss
+++ b/css/style.scss
@@ -241,8 +241,11 @@ body {
       justify-content: space-between;
       padding-top: 40px;
       padding-bottom: 40px;
+      align-items: center;
       p {
         color: white;
+        font-size: 20px;
+        margin: 0px;
         span {
           font-weight: bold;
         }
@@ -263,5 +266,177 @@ body {
   }
 }
 .services {
-
+  padding-top: 80px;
+  .serv-parts {
+    padding-bottom: 120px;
+    .tabs, .nav, .nav-tabs {
+      border-bottom: none;
+      li {
+        &.active {
+          a {
+            background-color: $contrast-color;
+            &:hover {
+              background-color: $contrast-color;
+            }
+            &:focus{
+              background-color: $contrast-color;
+            }
+          }
+        }
+        a {
+          display: block;
+          width: 54px;
+          height: 54px;
+          background-color: #81868e;
+          border-radius: 50%;
+          margin-bottom: 18px;
+          text-align: center;
+          padding: 12px 0px;
+          &.active, &:hover {
+            background-color: $contrast-color;
+          }
+          i {
+            font-size: 30px;
+            color: white;
+          }
+        }
+      }
+    }
+    .tab-content {
+      h4 {
+        font-size: 20px;
+        color: #464646;
+        margin-bottom: 40px;
+        letter-spacing: 1px;
+      }
+      .p-16 {
+        font-size: 16px;
+      }
+      span {
+        font-weight: bold;
+      }
+    }
+    .right-part {
+      padding-top: 40px;
+      .percents {
+        width: 32%;
+        display: inline-block;
+        img {
+          width: 100%;
+        }
+        p {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
+.impressed {
+  background-image: url("../images/imressed-bg_02.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 420px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  .relative {
+    position: relative;
+    h3 {
+      color: white;
+      margin-bottom: 60px;
+    }
+    p {
+      color: #b2b3b3;
+    }
+    .by-line {
+      color: #b2b3b3;
+      margin-top: 30px;
+      span {
+        font-weight: bold;
+      }
+      .contrast-font{
+        font-weight: normal;
+      }
+    }
+    .mac-comp {
+      position: absolute;
+      right: 0;
+      top: -130px;
+    }
+  }
+}
+.portfolio {
+  background-color: #f3f3f3;
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.grid-container {
+  columns: 4 200px;
+  max-width: 1170px;
+  column-gap: 1.5rem;
+  margin: 0 auto;
+  .gal-photo {
+    width: 150px;
+    margin: 0 10px 10px 0;
+    display: inline-block;
+    width: 100%;
+    transition: 0.5s;
+    position: relative;
+    &:hover .overlay {
+      opacity: 1;
+    }
+    .text-hover {
+      position: absolute;
+      padding: 15px 30px 0px;
+      text-align: center;
+      h3 {
+        margin-bottom: 10px;
+        &:after {
+          content: "";
+          display: block;
+          border-bottom: 1px solid $contrast-color;
+          width: 26px;
+          padding-top: 10px;
+        }
+      }
+      p {
+        font-size: 12px;
+        line-height: 22px;
+        margin-bottom: 20px;
+        color: #b2b3b3;
+      }
+      a {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+        background-color: black;
+        border-radius: 50%;
+        margin-right: 10px;
+        text-align: center;
+        i {
+          font-size: 16px;
+          color: white;
+          padding-top: 6px;
+        }
+      }
+    }
+    img {
+      width: 100%;
+      transition: 1s;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: 1s ease;
+      background-color: rgba(21, 21, 21, 0.85);
+    }
+  }
+}
+
+
