--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 @import url(bootstrap-theme.css);
 @import url(bootstrap.css);
+@import url(owl.carousel.css);
+@import url(owl.theme.default.css);
+@import url(https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css);
+@import url(https://resources/demos/style.css);
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&display=swap");
 h3 {
   font-size: 20px;
   font-family: "Roboto", sans-serif;
   margin-top: 34px;
-  margin-bottom: 46px;
+  margin-bottom: 40px;
   color: #333b46;
   letter-spacing: 2px;
   font-weight: 300; }
@@ -85,6 +89,28 @@ body {
         color: white;
         font-size: 16px;
         padding-top: 12px; }
+    body .main_page #back-top {
+      position: fixed;
+      bottom: 5%;
+      right: 5%;
+      padding: 0;
+      z-index: 100; }
+    body .main_page #back-top a {
+      font-size: 50px;
+      line-height: 50px;
+      display: block;
+      color: #b8b8b8;
+      text-decoration: none;
+      -webkit-transition: all linear 0.2s;
+      -moz-transition: all linear 0.2s;
+      -ms-transition: all linear 0.2s;
+      -o-transition: all linear 0.2s;
+      transition: all linear 0.2s;
+      text-align: center; }
+      @media screen and (max-width: 768px) {
+        body .main_page #back-top a {
+          font-size: 30px;
+          line-height: 30px; } }
 
 .this-is-bouncy {
   padding-top: 80px;
@@ -306,10 +332,10 @@ body {
       opacity: 1; }
     .grid-container .gal-photo .text-hover {
       position: absolute;
-      padding: 15px 30px 0px;
+      padding: 14% 30px 0px;
       text-align: center; }
       .grid-container .gal-photo .text-hover h3 {
-        margin-bottom: 10px; }
+        margin: 0px 0px 10px; }
         .grid-container .gal-photo .text-hover h3:after {
           content: "";
           display: block;
@@ -345,5 +371,46 @@ body {
       opacity: 0;
       transition: 1s ease;
       background-color: rgba(21, 21, 21, 0.85); }
+
+.start-pj {
+  background-image: url("../images/start-pj-bg_03.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 200px;
+  padding-top: 60px;
+  margin-top: 30px;
+  margin-bottom: 100px; }
+  .start-pj p {
+    color: white;
+    font-size: 20px;
+    margin-bottom: 40px;
+    letter-spacing: 1px; }
+  .start-pj a {
+    border: 1px solid white;
+    border-radius: 50px;
+    padding: 8px 30px;
+    font-size: 16px;
+    color: white;
+    text-decoration: none; }
+    .start-pj a:hover {
+      background-color: white;
+      color: #19bd9a; }
+
+.team {
+  padding-top: 50px; }
+  .team .owl-dots {
+    margin-top: 30px;
+    text-align: center; }
+    .team .owl-dots .owl-dot {
+      outline: none;
+      margin: 15px 5px; }
+      .team .owl-dots .owl-dot span {
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        border: 1px solid #19bd9a; }
+      .team .owl-dots .owl-dot.active span {
+        background-color: #19bd9a; }
 
 /*# sourceMappingURL=style.css.map */
