--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,9 @@
 @import "bootstrap-theme.css";
 @import "bootstrap.css";
+@import "owl.carousel.css";
+@import "owl.theme.default.css";
+@import url(https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css);
+@import url(https://resources/demos/style.css);
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
 
 @mixin max-screen($res) {
@@ -17,7 +21,7 @@ h3 {
   font-size: 20px;
   font-family: $title-font;
   margin-top: 34px;
-  margin-bottom: 46px;
+  margin-bottom: 40px;
   color: #333b46;
   letter-spacing: 2px;
   font-weight: 300;
@@ -37,7 +41,6 @@ p {
 .contrast-font {
   color: $contrast-color;
 }
-
 
 body {
   font-family: $main-font;
@@ -111,6 +114,30 @@ body {
         color: white;
         font-size: 16px;
         padding-top: 12px;
+      }
+    }
+    #back-top {
+      position: fixed;
+      bottom: 5%;
+      right: 5%;
+      padding: 0;
+      z-index:100;
+    }
+    #back-top a{
+      font-size: 50px;
+      line-height: 50px;
+      display:block;
+      color: #b8b8b8;
+      text-decoration:none;
+      -webkit-transition: all linear 0.2s;
+      -moz-transition: all linear 0.2s;
+      -ms-transition: all linear 0.2s;
+      -o-transition: all linear 0.2s;
+      transition: all linear 0.2s;
+      text-align: center;
+      @include max-screen(768px) {
+        font-size: 30px;
+        line-height: 30px;
       }
     }
   }
@@ -389,10 +416,10 @@ body {
     }
     .text-hover {
       position: absolute;
-      padding: 15px 30px 0px;
+      padding: 14% 30px 0px;
       text-align: center;
       h3 {
-        margin-bottom: 10px;
+        margin: 0px 0px 10px;
         &:after {
           content: "";
           display: block;
@@ -435,6 +462,54 @@ body {
       opacity: 0;
       transition: 1s ease;
       background-color: rgba(21, 21, 21, 0.85);
+    }
+  }
+}
+.start-pj {
+  background-image: url("../images/start-pj-bg_03.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 200px;
+  padding-top: 60px;
+  margin-top: 30px;
+  margin-bottom: 100px;
+  p {
+    color: white;
+    font-size: 20px;
+    margin-bottom: 40px;
+    letter-spacing: 1px;
+  }
+  a {
+    border: 1px solid white;
+    border-radius: 50px;
+    padding: 8px 30px;
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+    &:hover {
+      background-color: white;
+      color: $contrast-color;
+    }
+  }
+}
+.team {
+  padding-top: 50px;
+  .owl-dots{
+    margin-top: 30px;
+    text-align: center;
+    .owl-dot {
+      outline: none;
+      margin: 15px 5px;
+      span {
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        border: 1px solid $contrast-color;
+      }
+      &.active span {
+        background-color: $contrast-color;
+      }
     }
   }
 }
