--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,22 @@ body {
 
 .team {
   padding-top: 50px; }
+  .team .person-name {
+    font-size: 20px;
+    line-height: 28px;
+    position: relative;
+    margin-top: 20px; }
+    .team .person-name .f-14 {
+      font-size: 14px; }
+    .team .person-name:after {
+      content: "";
+      background-color: #19bd9a;
+      height: 80%;
+      width: 4px;
+      display: block;
+      position: absolute;
+      top: 10%;
+      right: -40px; }
   .team .owl-dots {
     margin-top: 30px;
     text-align: center; }
@@ -412,5 +428,108 @@ body {
         border: 1px solid #19bd9a; }
       .team .owl-dots .owl-dot.active span {
         background-color: #19bd9a; }
+  .team .d-flex {
+    display: flex;
+    justify-content: space-between; }
+    .team .d-flex p {
+      margin: 0;
+      letter-spacing: 1px;
+      font-size: 16px; }
+  .team .progress {
+    border-radius: 0;
+    height: 4px;
+    box-shadow: none; }
+    .team .progress .progress-bar {
+      background-color: #19bd9a;
+      background-image: none;
+      box-shadow: none; }
+  .team .bg-img {
+    margin-top: 80px;
+    background-image: url("../images/bg-img-team_10.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 200px;
+    padding-top: 58px; }
+    .team .bg-img p {
+      color: white;
+      font-size: 20px;
+      margin-bottom: 38px; }
+    .team .bg-img a {
+      border: 1px solid white;
+      border-radius: 50px;
+      padding: 8px 30px;
+      font-size: 16px;
+      color: white;
+      text-decoration: none; }
+      .team .bg-img a:hover {
+        background-color: white;
+        color: black; }
+  .team .testimonials {
+    background-color: #f3f3f3;
+    padding-top: 46px;
+    padding-bottom: 100px; }
+    .team .testimonials .feedback {
+      background-color: white;
+      padding-top: 50px;
+      padding-bottom: 40px; }
+      .team .testimonials .feedback .owl-dots {
+        margin-top: 0; }
+      .team .testimonials .feedback .f-16 {
+        font-size: 16px; }
+        .team .testimonials .feedback .f-16 span {
+          font-size: 14px; }
+      .team .testimonials .feedback .img-circle {
+        width: 130px;
+        height: 130px; }
+
+.blog {
+  background-image: url("../images/blog-bg_10.jpg");
+  background-size: cover;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px; }
+  .blog h3 {
+    color: white; }
+  .blog .comment {
+    color: #b2b3b3;
+    margin-left: 0; }
+  .blog h4 {
+    color: #e1e4e9;
+    font-size: 20px; }
+  .blog h5 {
+    font-family: "Roboto", sans-serif;
+    color: #81868e;
+    margin-bottom: 56px; }
+    .blog h5 .note {
+      color: #464646; }
+  .blog p {
+    max-width: 600px; }
+  .blog .read_more {
+    display: inline-block;
+    margin-top: 30px;
+    color: #b2b3b3;
+    text-decoration: none; }
+    .blog .read_more:hover {
+      color: white; }
+  .blog .hidden-text {
+    display: none; }
+  .blog .owl-carousel .owl-dots {
+    margin-top: 30px;
+    text-align: center;
+    position: absolute;
+    right: 5px;
+    top: 40px; }
+    .blog .owl-carousel .owl-dots .owl-dot {
+      outline: none;
+      margin: 10px 5px;
+      display: block; }
+      .blog .owl-carousel .owl-dots .owl-dot span {
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        border: 1px solid #b2b3b3; }
+      .blog .owl-carousel .owl-dots .owl-dot.active span {
+        background-color: #b2b3b3; }
 
 /*# sourceMappingURL=style.css.map */
