--- a/css/style.scss
+++ b/css/style.scss
@@ -494,6 +494,25 @@ body {
 }
 .team {
   padding-top: 50px;
+  .person-name {
+    font-size: 20px;
+    line-height: 28px;
+    position: relative;
+    margin-top: 20px;
+    .f-14 {
+      font-size: 14px;
+    }
+    &:after {
+      content: "";
+      background-color: $contrast-color;
+      height: 80%;
+      width: 4px;
+      display: block;
+      position: absolute;
+      top: 10%;
+      right: -40px;
+    }
+  }
   .owl-dots{
     margin-top: 30px;
     text-align: center;
@@ -512,6 +531,137 @@ body {
       }
     }
   }
+  .d-flex {
+    display: flex;
+    justify-content: space-between;
+    p {
+      margin: 0;
+      letter-spacing: 1px;
+      font-size: 16px;
+    }
+  }
+  .progress {
+    border-radius: 0;
+    height: 4px;
+    box-shadow: none;
+    .progress-bar {
+      background-color: $contrast-color;
+      background-image: none;
+      box-shadow: none;
+    }
+  }
+  .bg-img {
+    margin-top: 80px;
+    background-image: url("../images/bg-img-team_10.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 200px;
+    padding-top: 58px;
+    p {
+      color: white;
+      font-size: 20px;
+      margin-bottom: 38px;
+    }
+    a {
+      border: 1px solid white;
+      border-radius: 50px;
+      padding: 8px 30px;
+      font-size: 16px;
+      color: white;
+      text-decoration: none;
+      &:hover {
+        background-color: white;
+        color: black;
+      }
+    }
+  }
+  .testimonials {
+    background-color: #f3f3f3;
+    padding-top: 46px;
+    padding-bottom: 100px;
+    .feedback {
+      background-color: white;
+      padding-top: 50px;
+      padding-bottom: 40px;
+      .owl-dots{
+        margin-top: 0;
+      }
+      .f-16{
+        font-size: 16px;
+        span{
+          font-size: 14px;
+        }
+      }
+      .img-circle {
+        width: 130px;
+        height: 130px;
+      }
+    }
+  }
 }
-
+.blog {
+  background-image: url("../images/blog-bg_10.jpg");
+  background-size: cover;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  h3 {
+    color: white;
+  }
+  .comment{
+    color: #b2b3b3;
+    margin-left: 0;
+  }
+  h4 {
+    color: #e1e4e9;
+    font-size: 20px;
+  }
+  h5 {
+    font-family: $title-font;
+    color: #81868e;
+    margin-bottom: 56px;
+    .note{
+      color: #464646;
+    }
+  }
+  p {
+    max-width: 600px;
+  }
+  .read_more{
+    display: inline-block;
+    margin-top: 30px;
+    color: #b2b3b3;
+    text-decoration: none;
+    &:hover{
+      color: white;
+    }
+  }
+  .hidden-text{
+    display:none;
+  }
+  .owl-carousel{
+    .owl-dots{
+      margin-top: 30px;
+      text-align: center;
+      position: absolute;
+      right: 5px;
+      top: 40px;
+      .owl-dot {
+        outline: none;
+        margin: 10px 5px;
+        display: block;
+        span {
+          display: block;
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          border: 1px solid #b2b3b3;
+        }
+        &.active span {
+          background-color: #b2b3b3;
+        }
+      }
+    }
+  }
+}
 
