--- a/css/style.scss
+++ b/css/style.scss
@@ -48,6 +48,25 @@ p {
 .j-content-center{
   justify-content: center;
 }
+.j-space-betw{
+  justify-content: space-between;
+}
+.form-control{
+  width: 100%;
+  border-radius: 0px;
+  border: 1px solid #81868e;
+  height: 40px;
+  -webkit-box-shadow: none;
+  outline: none;
+  background-color: transparent;
+}
+.btn {
+  border-radius: 0px;
+  background-color: $contrast-color;
+  color: white;
+  border: none;
+  font-weight: 300;
+}
 
 body {
   font-family: $main-font;
@@ -751,25 +770,22 @@ body {
     max-width: 360px;
     width: 100%;
     .form-control{
-      width: 100%;
-      background-color: transparent;
-      border-radius: 0px;
-      border: 1px solid #81868e;
-      height: 40px;
       color: white;
+      width: 100%;
       -webkit-box-shadow: none;
+      outline: none;
     }
   }
   .btn {
-    border-radius: 0px;
     margin-left: 8px;
     height: 40px;
-    background-color: $contrast-color;
-    color: white;
     max-width: 152px;
     width: 100%;
-    border: none;
-    font-weight: 300;
+    &:hover{
+      background-color: transparent;
+      border: 1px solid $contrast-color;
+      color: white;
+    }
   }
 }
 .contact {
@@ -777,5 +793,74 @@ body {
     background-color: #f3f3f3;
     padding-top: 50px;
     padding-bottom: 90px;
+  }
+  .contact-info {
+    display: inline-block;
+    max-width: 280px;
+    height: 274px;
+    background-color: white;
+    margin: 20px;
+    &:hover img {
+      filter: grayscale(0);
+    }
+    img {
+      width: 100%;
+      margin-bottom: 20px;
+      filter: grayscale(100%);
+      transition: 0.5s;
+    }
+    p{
+      line-height: 20px;
+    }
+  }
+  form{
+    margin-top: 80px;
+    margin-bottom: 110px;
+  }
+  .form-group{
+    width: 30%;
+    @include max-screen(414px) {
+      width: 100%;
+    }
+  }
+  .form-control{
+    border: 1px solid #d8dce0;
+    resize: none;
+    margin-bottom: 30px;
+    -webkit-box-shadow: none;
+    outline: none;
+  }
+  .btn {
+    height: 54px;
+    width: 100%;
+    font-weight: 400;
+    &:hover{
+      background-color: transparent;
+      border: 1px solid $contrast-color;
+      color: $contrast-color;
+    }
+  }
+  .map {
+    height: 494px;
+    position: relative;
+    margin: auto;
+    transition: 1s;
+    &:hover .map-hover {
+      opacity: 0;
+    }
+    .map-hover{
+      position: absolute;
+      opacity: 1;
+      width: 100%;
+      height: 100%;
+      top:0px;
+      left: 0px;
+      background-color: rgba(21, 21, 21, 0.85);
+      align-content: center;
+      transition: 1s;
+      h3{
+        color: white;
+      }
+    }
   }
 }
